# CPP_SFML_RealTime_Applications

./: .gitignore
DiceRoll/: Cmakelists.txt  README.md
DiceRoll/include/caps/: Dice_Capsule.h  Main_Capsule.h
DiceRoll/libs/gui/include/: Gui.h
DiceRoll/libs/gui/src/: Gui.cpp
DiceRoll/libs/myRealTime/include/: CapsuleRunner.h  Message.h  MessageHandler.h  MessageManager.h  SendMessage.h  Timer.h
DiceRoll/libs/myRealTime/src/: CapsuleRunner.cpp  MessageHandler.cpp  MessageManager.cpp  SendMessage.cpp
DiceRoll/src/: main.cpp
DiceRoll/src/caps/: Dice_Capsule.cpp  Main_Capsule.cpp
HelloWorld/: Cmakelists.txt
HelloWorld/include/caps/: Main_Capsule.h
HelloWorld/libs/gui/: CMakeLists.txt
HelloWorld/libs/myRealTime/: CMakeLists.txt
HelloWorld/libs/myRealTime/include/: Capsule.h  Message.h  MessageHandler.h  MessageManager.h  SendMessage.h
HelloWorld/libs/myRealTime/src/: MessageHandler.cpp  MessageManager.cpp  SendMessage.cpp
HelloWorld/src/: main.cpp
HelloWorld/src/caps/: Main_Capsule.cpp
Race/: Cmakelists.txt  README.md
Race/include/: RacerProfile.h
Race/include/caps/: Main_Capsule.h  Racer_Capsule.h  UI_Capsule.h
Race/libs/gui/: CMakeLists.txt
Race/libs/myRealTime/: CMakeLists.txt
Race/libs/myRealTime/include/: Capsule.h  CapsuleRunner.h  Message.h  MessageHandler.h  Timer.h
Race/libs/myRealTime/mod_include/: Message.h
Race/libs/myRealTime/src/: CapsuleRunner.cpp  MessageHandler.cpp  MessageManager.cpp  SendMessage.cpp  Timer.cpp
Race/src/: main.cpp
Race/src/caps/: Main_Capsule.cpp  Racer_Capsule.cpp  UI_Capsule.cpp
(+6 files in other folders)
